--- a/payment_banesco/views/views_template_banesco.xml
+++ b/payment_banesco/views/views_template_banesco.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>        
-    <template id="redirect_form">
-        <script type="text/javascript" src="/payment_banesco/static/src/js/loading.js"></script>
+   <template id="assets_backend" name="CRM assets backend" inherit_id="web.assets_backend">
+        <xpath expr="." position="inside">
+            <script type="text/javascript" src="payment_banesco/static/src/js/loading.js"></script>
+        </xpath>
     </template>
 </odoo>
